--- a/src/pages/UserProfileStyle.css
+++ b/src/pages/UserProfileStyle.css
@@ -75,7 +75,7 @@
   justify-content: space-around;
   background-color: white;
   width: 85rem;
-
+  margin-top: 10%;
 }
 .card-display-style{
   position: absolute;
