--- a/src/Components/Auth/LoginForm/LoginFormStyle.css
+++ b/src/Components/Auth/LoginForm/LoginFormStyle.css
@@ -3,30 +3,25 @@
 
 .wrapper-landing-page{
     display: flex;
-    /* flex: 1; */
     justify-content: end;
-    /* margin-right:55px; */
     position: absolute;
-    height: 100vh;
+    /* height: 100vh; */
     width: 45%;
-    /* left: 55%; */
-    /* float: right; */
-    /* left: 5rem; */
-    /* width: 30%; */
+
 }
 
-.wrapper {
+.wrapper-login {
     width:500px;
     background: transparent;
     color: #000;
     border-radius: 10px;
-    padding: 50px 15.5px;
+    padding: 30px 15.5px;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(25px);
     border-color: whitesmoke;
     position: absolute;
     transform: translateX(185%);
-    /* margin-top:2%; */
+    margin-top:2%;
     right:2rem;
     display: flex;
 }
@@ -35,18 +30,18 @@
     height: 80%;
     width: 5%;
     }
-    .wrapper{
+    .wrapper-login{
     top: 3%;
     width: 350px;
     height: 80%;
     margin-top:1%;
     }
-    .wrapper h2{
+    .wrapper-login h2{
 
     margin-top:1%;
     font-size:20px;
     }
-    .wrapper-landing-page .wrapper p{
+    .wrapper-landing-page .wrapper-login p{
         font-size:14px;
     }
     .remember-forgot label{
@@ -55,7 +50,7 @@
     .forgot-password a{
         font-size: 15px;
     }
-    .wrapper .register-link p {
+    .wrapper-login .register-link p {
         font-size: 14px;
         text-align: center;
         margin: 10px 0 15px;
@@ -69,29 +64,36 @@
 @media (max-width: 756px){
 
 }
-.wrapper h2 {
+.wrapper-login h2 {
     /* font-size: 25px; */
     text-align: center;
     font-weight: bolder;
     margin-bottom: 27.5px;
 }
 
-.wrapper p {
+.wrapper-login p {
     font-size: 20px;
     /* font-weight: 35; */
     text-align: center;
 }
 
  .input-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    width: 100%;
+    width:100%;
     height: 30px;
+    margin-left: 50%;
     margin: 30px 0;
 }
 
+
 .input-box input {
-    width: 100%;
-    height: 100%;
+    /* margin-left: 50%; */
+    margin-right: 50%;
+    width: 50%;
+    height: 50%;
     background: transparent;
     outline: none;
     border: 2px solid rgba(209, 209, 209, 0.766);
@@ -148,7 +150,7 @@
     text-decoration: none;
 }
 
-.wrapper button {
+.wrapper-login button {
     width: 100%;
     height: 47.5px;
     background: #fff ;
@@ -164,7 +166,7 @@
     margin-top: 20px;
 }
 
-.wrapper .register-link {
+.wrapper-login .register-link {
     font-size: 18.5px;
     text-align: center;
     margin: 20px 0 15px;
@@ -176,13 +178,13 @@
     font-weight: 600;
 }
 
-.wrapper .version{
+.wrapper-login .version{
     margin-top: 20px;
     text-align: center;
     font-size: 18px;
 }
 
-.wrapper .reserved{
+.wrapper-login .reserved{
     margin-top: 20px;
     text-align: center;
     font-size: 18px;
@@ -192,20 +194,35 @@
     /* display: inline-block; */
     position: absolute;
     font-size: 20px;
-    top: -2%;
-    /* margin-top: 60px; */
+    /* top: -2%; */
+    /* margin-top: 0px; */
     font-family: 'Montserrat', sans-serif;
-    margin-left: 20px;
+    /* margin-left: 20px; */
+    height: 87.5vh;
+    width: 50%;    
+    z-index: -1;
+}
+.welcome-message img{
+    z-index: -1;
+    height: 70vh;
+    width: 100%;
+    margin-top: 15%;
+    object-fit: contain;
 }
 
 .welcome-message p{
+    /* top */
     font-size: 25px;
-    margin-top: auto;
+    /* margin-top: auto; */
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     margin-left: 60px;
     text-align: justify;
     color: rgb(70, 70, 70);
+}
+.welcome-message-bkg{
+    position: absolute;
+    top: -15%;
 }
 .landingpagebkg{
     display: flex;
