--- a/src/pages/searchbar.css
+++ b/src/pages/searchbar.css
@@ -1,30 +1,47 @@
-.backgorund-filuup{
-  background-color: #A024A3;
+.backgrond-form-style{
+  position: fixed;
+  /* top: -148%; */
+  /* margin-left:-5%; */
+  height:100%;
   width: 100%;
-  height: 100vh;
+  /* object-fit: cover; */
+  z-index: -1;
+  /* object-fit: cover; */
 }
+.background-fillupform {
+  height: 100%;
+  transform: scaleX(-1);
+  width: 100%;
+  object-fit: cover;
+}
+.backgorund-filuup{
+  /* width: 100%; */
+  height: 100%;
+  margin: 0;
+  padding:0 ;
+  /* position: absolute; */
+}
+/* .backgorund-filuup img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+
 .search-bar {
-  /* display: grid;
-  grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  margin-right:50rem;
-  height: 100vh;
-  border-radius: 5px;
-  gap: 1rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #007bff; */
   display: grid;
   grid-template-columns: repeat(1 , 1fr);
   grid-template-rows: repeat(2, 1fr);
-  width: 50%;
-  height: 55vh;
-  margin-left: 5%;
+  width:45%;
+  height: 60vh;
+  /* margin-left: 1%; */
   margin-top: 5%;
   align-items: center;
   grid-row-gap: 45px;
-  background-color: white;
+  border: 2px solid rgba(209, 209, 209, 0.766);
+    border-radius: 40px;
+  background: transparent;
+  /* background-color: rgb(40, 5, 5); */
+  border-radius: 30px;
   position: absolute;
 }
 
@@ -36,7 +53,7 @@
 
 .search-bar button {
   padding: 8px 15px;
-  background-color: #007bff;
+  background-color: rgb(255, 65, 96);;
   color: #fff;
   border: none;
   border-radius: 3px;
@@ -49,24 +66,20 @@
   margin-bottom: 5%;
 }
 .search-bar button:hover {
-  background-color: #0056b3;
+  background-color: rgb(249, 21, 59);
 }
 .design-fil-up{
   display: grid;
   grid-template-columns:2f;
   grid-template-rows: 1fr;
-  /* margin-right: 5%; */
   justify-content: end;
   margin-left: 55%;
   width: auto;
-  /* height: 95%; */
-  /* height: 100rem; */
-  /* bottom: 55%; */
   position: absolute;
-  /* background-color: #A024A3; */
-  color: #d8d2d2;
-  /* z-index: -1; */
+  color: rgb(255, 65, 96);
+  /* background-color: #0056b3; */
 }
+
 .design-fil-up p{
   margin-left: 5%;
 }
@@ -74,9 +87,50 @@
   text-align: center;
   margin-top: 25%;
   margin-bottom: 0;
-  height: 100%;
 }
 .fill-up-secondpara{
   margin-top: 5%;
-  /* margin-bottom: 56%; */
+}
+.popup{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin-top: 2%;
+}
+.popup-inner{
+  border: 2px solid rgba(209, 209, 209, 0.766);
+  padding: 2%;
+  border-radius:1rem;
+  z-index: 1;
+  /* height: 100% */
+}
+.popup-inner button{
+  background: #A024A3;
+  background-image: -webkit-linear-gradient(top, #A024A3, #5a1d5c);
+  background-image: -moz-linear-gradient(top, #A024A3, #5a1d5c);
+  background-image: -ms-linear-gradient(top, #A024A3, #5a1d5c);
+  background-image: -o-linear-gradient(top, #A024A3, #5a1d5c);
+  background-image: linear-gradient(to bottom, #A024A3, #5a1d5c);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  -webkit-box-shadow: 0px 5px 5px #666666;
+  -moz-box-shadow: 0px 5px 5px #666666;
+  box-shadow: 0px 5px 5px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 5px 20px 5px 20px;
+  text-decoration: none;
+}
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
+  padding: 5px;
+  background-color: #ffe6e6;
+  border: 1px solid red;
+  border-radius: 5px;
 }
