--- a/src/Components/Auth/RegistrationForm/RegistrationFormStyle.css
+++ b/src/Components/Auth/RegistrationForm/RegistrationFormStyle.css
@@ -19,7 +19,8 @@
 }
 .wrapper-register {
   width:500px;
-  background: transparent;
+  /* background: transparent; */
+  background-image: url(../../Assets/landing_page_bkg2.png);
   color: #000;
   border-radius: 10px;
   padding: 30px 15.5px;
@@ -47,12 +48,12 @@
     text-align: center;
 } 
 
-.wrapper-register .input-box {
+/* .wrapper-register .input-box {
     position: relative;
     width: 100%;
     height: 60px;
     margin: 30px 0;
-}
+} */
 
 .input-box input {
     width: 100%;
@@ -66,6 +67,8 @@
     padding: 20px 45px 20px 20px;
 }
 
+
+
 .input-box input::placeholder{
     color: gray ;
 }
@@ -77,28 +80,18 @@
     transform: translateY(-50%);
     font-size: 16px;
 }
-
-.input-box .icon{
-    position: absolute;
-    right: 35px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-    color: rgb(39, 39, 39);
-}
-
 .wrapper-register .remember-forgot{
     display: flex;
     justify-content: space-between;
     font-size: 20.5px;
     margin: -15px 0 15px;
 }
-
+/* 
 .remember-forgot label input{
     accent-color: gray;
     margin-right: 4px;
     margin-top: 20px;
-}
+} */
 
 .remember-forgot a{
     color: purple;
@@ -149,6 +142,25 @@
     margin-top: 20px;
     text-align: center;
     font-size: 18px;
+}
+.welcome-message{
+    /* display: inline-block; */
+    position: absolute;
+    font-size: 20px;
+    /* top: -2%; */
+    /* margin-top: 0px; */
+    font-family: 'Montserrat', sans-serif;
+    /* margin-left: 20px; */
+    height: 87.5vh;
+    width: 50%;    
+    z-index: -1;
+}
+.welcome-message img{
+  z-index: -1;
+  height: 70vh;
+  width: 100%;
+  margin-top: 15%;
+  object-fit: contain;
 }
 
 .welcome-message h1{
