--- a/src/Components/Global/Navbar_LandingStyle.css
+++ b/src/Components/Global/Navbar_LandingStyle.css
@@ -12,7 +12,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: aqua; */
   width: 100%;
   height: 7.5rem;
   border-radius: 0px 0px 10px 10px;
@@ -47,7 +46,6 @@
   text-decoration: none;
 }
 .checkbtn{
-  /* font-size: 30px; */
   color: black;
   float: right;
   line-height: 80px;
@@ -65,7 +63,7 @@
 }
 
 
-@media (max-width: 952px){
+/* @media (max-width: 952px){
   .landing-nav {
     font-size: 35px;
     margin-left: 26%;
@@ -124,7 +122,7 @@
   #check:checked ~ ul{
     left: 0;
   }
-}
+} */
 
   
 
