--- a/src/pages/HomeStyle.css
+++ b/src/pages/HomeStyle.css
@@ -313,7 +313,7 @@
 .home_intro{
   position: absolute;
   top: 23%;
-  left: 8%;
+  left: 3%;
   width: 480px;
   height: 460px;
   /* background-color: white; */
@@ -425,7 +425,7 @@ color: #A024A3;
   text-decoration: none;
 }
 .home_picture{
-  /* object-fit: cover; */
+  object-fit: cover;
   height: 52.688rem ;
   width: 100%;
   z-index: -1;
