--- a/src/pages/ChatbotStyle.css
+++ b/src/pages/ChatbotStyle.css
@@ -6,12 +6,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  /* background-color: white; */
 }
 
 body {
   margin: 0;
   padding: 0;
-  background: #E3F2FD;
+  background: white;
 }
 
 
