--- a/src/pages/HomeStyle.css
+++ b/src/pages/HomeStyle.css
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: aqua; */
+  background-color: white;
   width: 100%;
   height: 7.5rem;
   border-radius: 0px 0px 10px 10px;
@@ -131,7 +131,7 @@
     border: none;
     /* box-shadow: none; */
     border-radius: 15rem;
-    background-color: #A024A3;
+    /* background-color: #A024A3; */
     width:auto;
     height:auto;
     z-index: 2;
@@ -202,7 +202,8 @@
     margin-left: 24%;
   }
   .home_intro {
-    margin-left:13.4rem;
+    margin-left:15.4rem;
+    margin-top: 65%;
   }
   
 }
@@ -213,6 +214,156 @@
   .home_intro {
     margin-left:10rem;
   }
+}
+
+@media only screen and (max-width: 520px) {
+  .home_intro .fix_moko {
+    margin-right: 20%;
+  }
+
+}
+
+
+@media (max-width: 470px) {
+  .background_home .picture_fix .home_picture{
+    width: 57svh;
+    height: 86dvh;
+    object-fit: cover;
+  }
+  .navbar_master{
+    width: 57svh;
+  }
+  .page_name{
+    /* text-align: center; */
+    margin-left:8.9%;
+  }
+  .checkbtn{
+    margin-top: 3%;
+  }
+  .home_intro .fix_moko{
+    margin-left: -20%;
+    margin-top: 15rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .background_home .picture_fix .home_picture{
+    width: 55.5svh;
+    object-fit: cover;
+  }
+  .navbar_master{
+    width: 55.5svh;
+  }
+  .page_name{
+    /* text-align: center; */
+    margin-left:8.9%;
+  }
+  .checkbtn{
+    margin-top: 3%;
+  }
+  .home_intro .fix_moko{
+    margin-left: -20%;
+    margin-top: 15rem;
+  }
+}
+
+
+@media (max-width: 425px) {
+ .background_home .picture_fix .home_picture{
+    width: 54.8svh;
+    object-fit: cover;
+  }
+  .navbar_master{
+    width: 54.8vh;
+  }
+  .page_name{
+    /* text-align: center; */
+    margin-left:8.4%;
+  }
+  .navbar_master .checkbtn i img{
+    margin-right: -55%;
+    height: 100%;
+    width: 100%;
+    /* z-index: 31; */
+    /* background-color: #A024A3; */
+  }
+  .checkbtn{
+    width: 8%;
+    margin-left: 23rem;
+    margin-top: 3%;
+  }
+  .home_intro .fix_moko{
+    margin-left: -25%;
+    margin-top: 15rem;
+  }
+}
+
+@media (max-width: 375px) {
+  .background_home .picture_fix .home_picture{
+    height: 130dvh;
+    width: 65.5svh;
+    object-fit: cover;
+    /* margin-left: 17%; */
+  }
+  .navbar_master{
+    width: 65.5vh;
+  }
+  .page_name{
+    /* text-align: center; */
+    margin-left:17%;
+  }
+  .fix_moko .button_type{
+    margin-top: 10rem;
+  }
+  .navbar_master .checkbtn i img{
+    margin-right: -55%;
+    height: 100%;
+    width: 100%;
+    /* z-index: 31; */
+    /* background-color: #A024A3; */
+  }
+  .checkbtn{
+    width: 10%;
+    margin-left: 28rem;
+  }
+  .home_intro .fix_moko {
+    margin-right: -25%;
+    margin-top: 25rem;
+  }
+}
+@media (max-width: 350px) {
+  .background_home .picture_fix .home_picture{
+    height: 140dvh;
+    width: 65.5svh;
+    /* margin-left: 10%; */
+  }
+}
+@media only screen and (max-width: 320px ){
+ .background_home .picture_fix .home_picture{
+     height: 155dvh;
+     width: 65.5svh;
+     /* margin-left: 10%; */
+   }
+   .navbar_master{
+     width: 65.5vh;
+   }
+   .page_name{
+     text-align: center;
+   }
+   .navbar_master .checkbtn i img{
+    z-index: -2;
+    height: 100%;
+    width: 100%;
+    margin-right: -85%;
+ }
+ .checkbtn{
+  width: 10%;
+  margin-left: 28rem;
+}
+.home_intro .fix_moko {
+  margin-right: -75%;
+  margin-top: 34rem;
+}
 }
 /* section{
   background: url(bg1.jpg) no-repeat;
