Made the footer bootstrap, fixes on going..

--- a/src/Components/Global/FooterStyle.css
+++ b/src/Components/Global/FooterStyle.css
@@ -24,11 +24,11 @@
   flex-wrap: wrap;
   justify-content: space-between;
   gap: .5rem;
-  padding: 60px 220px;
+  padding: 60px 240px;
 }
 
 .footer-row .footer-col h4 {
-  color: #810088;
+  color: #d24bd9;
   font-size: 1.4rem;
   font-weight: 500;
   letter-spacing: 1px;
@@ -62,7 +62,7 @@
 
 .footer-col form {
   display: flex;
-  gap: 60px;
+  gap: 100px;
 }
 
 .footer-col input {
